Update detekt